--- a/templates/gdpr.html
+++ b/templates/gdpr.html
@@ -37,7 +37,7 @@
                         <p><br></p>
                         <p><strong>1.2.&nbsp;</strong></p>
                         <p><strong>Kontaktné údaje zodpovednej osoby:</strong></p>
-                        <p>Mgr. Mgr. Ľubomíra Mešťanová, info@nepritomnost.sk<strong><br><br></strong></p>
+                        <p>Mgr. Ľubomíra Mešťanová, info@nepritomnost.sk<strong><br><br></strong></p>
                         <p><strong>1.3.&nbsp;</strong></p>
                         <p><strong>Kategórie dotknutých osobných údajov:</strong><br><br></p>
                         <p><em>1.3.1.</em>&nbsp;<strong>identifikačné údaje</strong>, ktorými sa rozumejú najmä meno,
