--- a/templates/terms.html
+++ b/templates/terms.html
@@ -62,38 +62,31 @@
                     <p><strong>Osobné údaje</strong>&nbsp;v zmysle čl. 4 ods. 1 GDPR sú akékoľvek informácie týkajúce sa
                         identifikovanej alebo identifikovateľnej fyzickej osoby. Osobnými údajmi sa na účely týchto VOP
                         rozumejú osobné údaje spĺňajúce kritériá podľa predchádzajúcej vety, ktoré užívateľ alebo tretia
-                        osoba poskytli poskytovateľovi pred alebo po uzavretí zmluvy podľa bodu 2.16 týchto VOP.</p>
+                        osoba poskytli poskytovateľovi.</p>
                     <p><strong>2.7.&nbsp;</strong></p>
                     <p><strong>Dáta</strong>&nbsp;sú akékoľvek údaje vrátane osobných údajov poskytnutých
                         poskytovateľovi užívateľom alebo treťou osobou pri využívaní služby systému Nepritomnost v rámci
                         systému Nepritomnost.</p>
                     <p><strong>2.8.&nbsp;</strong></p>
-                    <p><strong>Obchodný partner</strong>&nbsp;je akákoľvek osoba oprávnená na predaj služieb systému
-                        Nepritomnost užívateľovi na základe zmluvy o spolupráci, ktorú má uzatvorenú s poskytovateľom na
-                        predaj služieb systému Nepritomnost. Zoznam obchodných partnerov je verejne dostupný na portáli
-                        www.Nepritomnost.sk v sekcii Obchodní partneri.</p>
-                    <p><strong>2.9.&nbsp;</strong></p>
                     <p><strong>Nepritomnost</strong>&nbsp;alebo systém Nepritomnost, alebo databáza Nepritomnost, alebo
                         portál Nepritomnost poskytuje najmä funkcionality umožňujúce správu neprítomností, funkcionality
                         sú prístupné prostredníctvom siete internet.</p>
-                    <p><strong>2.10.&nbsp;</strong></p>
+                    <p><strong>2.9.&nbsp;</strong></p>
                     <p><strong>Služby</strong>&nbsp;sú konkrétne užívateľom alebo treťou osobou využité služby systému
                         Nepritomnost spomedzi služieb špecifikovaných na portáli app.nepritomnost.sk.</p>
-                    <p><strong>2.11.</strong>&nbsp;</p>
+                    <p><strong>2.10.</strong>&nbsp;</p>
                     <p><strong>Cenník</strong>&nbsp;dokument zverejnený na stránke&nbsp;www.nepritomnost.sk, ktorého
                         obsah vrátane príslušných tam uvedených pojmov sa vzťahuje aj na tieto VOP.</p>
+                    <p><strong>2.11.&nbsp;</strong></p>
+                    <p><strong>Odplata</strong>&nbsp;je cena uhrádzaná užívateľom poskytovateľovi za využité služby v súlade s Cenníkom.</p>
                     <p><strong>2.12.&nbsp;</strong></p>
-                    <p><strong>Odplata</strong>&nbsp;je cena uhrádzaná užívateľom poskytovateľovi za využité služby na
-                        základe zmluvy a v súlade s Cenníkom.</p>
-                    <p><strong>2.13.&nbsp;</strong></p>
                     <p><strong>Ochrana osobných údajov</strong>&nbsp;spracúvanie a ochrana osobných údajov zadaných do
-                        systému Nepritomnost užívateľom alebo treťou osobou je vymedzená v príslušnej zmluve o
-                        spracúvaní osobných údajov.</p>
-                    <p><strong>2.14.&nbsp;</strong></p>
+                        systému Nepritomnost užívateľom alebo treťou osobou je vymedzená v spracúvaní osobných údajov.</p>
+                    <p><strong>2.13.&nbsp;</strong></p>
                     <p><strong>Ukončenie využívania služby</strong>&nbsp;je okrem prípadov predpokladaných týmito VOP aj
                         uplynutie viac ako 12 mesiacov od posledného prihlásenia užívateľa alebo tretej osoby do
                         užívateľského profilu užívateľa.</p>
-                    <p><strong>2.15.&nbsp;</strong></p>
+                    <p><strong>2.14.&nbsp;</strong></p>
                     <p><strong>Zmluvné strany</strong>&nbsp;spolu poskytovateľ a užívateľ alebo v príslušnom prípade
                         zástupca užívateľa alebo tretia osoba podľa bodu 2.3 týchto VOP.<br></p>
                     <p><em></em></p>
@@ -210,8 +203,8 @@
                         obsiahnutými, nie je oprávnený systém meniť alebo upravovať. Tento bod nijakým spôsobom
                         nerozširuje oprávnenia užívateľa, ako sú vymedzené v týchto VOP.</p>
                     <p><strong>6.5.</strong></p>
-                    <p>Užívateľ je povinný počas trvania zmluvy poskytovať poskytovateľovi súčinnosť nevyhnutnú pre
-                        plnenie zmluvy a riadne plnenie záväzkov poskytovateľa. Absencia alebo nedostatok súčinnosti
+                    <p>Užívateľ je povinný počas trvania služby poskytovať poskytovateľovi súčinnosť nevyhnutnú pre
+                        plnenie  a riadne plnenie záväzkov poskytovateľa. Absencia alebo nedostatok súčinnosti
                         užívateľa vylučuje vznik zodpovednosti poskytovateľa za omeškanie a za vzniknuté škody.</p>
                     <p><strong>6.6.</strong></p>
                     <p>Užívateľ berie na vedomie, že služba nie je určená na spracúvanie dát, ktoré svojou povahou
@@ -275,7 +268,7 @@
                         ktorou je užívateľ na portáli zaregistrovaný. Ak sa užívateľ ani po doručení upozornenia podľa
                         predchádzajúcej vety neprihlási do svojho profilu na portáli Nepritomnost a podľa názoru
                         poskytovateľa nedá ani iným relevantným spôsobom poskytovateľovi na vedomie jeho záujem
-                        pokračovať vo využívaní služieb, zmluva zanikne uplynutím doby podľa bodu 2.15 týchto VOP a
+                        pokračovať vo využívaní služieb, zmluva zanikne uplynutím doby podľa bodu 2.14 týchto VOP a
                         poskytovateľ dáta užívateľa zneprístupní a trvale vymaže tak, aby nebolo možné ich opätovné
                         obnovenie (profil užívateľa vrátane databáz založených užívateľom alebo treťou osobou a ich
                         záloh, a to aj v prípade, že sú tieto databázy sprístupnené aj iným užívateľom). Do okamihu
@@ -320,7 +313,7 @@
                     <p><strong>7.8.</strong></p>
                     <p>Poskytovateľ má ďalej právo:</p>
                     <p><em>7.8.1.&nbsp;</em></p>
-                    <p>na zaplatenie odplaty za poskytovanie služieb v súlade so zmluvou a týmito VOP;</p>
+                    <p>na zaplatenie odplaty za poskytovanie služieb v súlade s týmito VOP;</p>
                     <p><em>7.8.2.&nbsp;</em></p>
                     <p>na náhradu škody spôsobenú užívateľom alebo treťou osobou, ktorá vznikla z dôvodu zneužitia
                         služieb podľa bodu 7.6.1 týchto VOP;</p>
